# banbot

./: BanBot.cfg  CMakeLists.txt  DoxyfileWizardSetupToMakeDOCS  Makefile  README  TODO
boost_1_45/: makefile
cfg/: Adminlist  BanBot.cfg  Banlist
database/: db.sqlite
docs/: BanBot1.1.tex
docs/html/: Analyzer_8cpp.html  Analyzer_8h.html  Analyzer_8h_source.html  Backup_8cpp.html  Backup_8h.html  Backup_8h_source.html  ConfigLoader_8cpp.html  ConfigLoader_8h.html  ConfigLoader_8h_source.html  _analyzer_8h_source.html  _backup_8h_source.html  _config_loader_8h_source.html  annotated.html  classAnalyzer-members.html  classAnalyzer.html  classAnalyzer_1_1Player-members.html  classAnalyzer_1_1Player.html  classBackup-members.html  classBackup.html  classConfigLoader-members.html  classConfigLoader.html  classConfigLoader_1_1Banlist-members.html  classConfigLoader_1_1Banlist.html  classConfigLoader_1_1Option-members.html  classConfigLoader_1_1Option.html  classConnection-members.html  classConnection.html  classDb-members.html  classDb.html  classLogger-members.html  classLogger.html  class_analyzer-members.html  class_analyzer.html  class_backup-members.html  class_backup.html  class_config_loader-members.html  class_config_loader.html  class_config_loader_1_1_options-members.html  class_config_loader_1_1_options.html  class_connection-members.html  (+38 more)
docs/latex/: annotated.tex  class_analyzer.tex  class_backup.tex  class_config_loader.tex  class_config_loader_1_1_options.tex  class_connection.tex  class_db.tex  class_logger.tex  class_server.tex  class_server_1_1_player.tex  doxygen.sty  main.tex  refman.tex  struct_db_1_1id_motive_struct.tex  (+2 more)
scripts/: BanbotLibsDirCheck.sh  boostBuild.sh  boostBuild.sh~  objDirCheck.sh  objDirCheck.sh~
src/: Analyzer.cpp  Analyzer.h  Backup.cpp  Backup.h  ConfigLoader.cpp  ConfigLoader.h  FileLister.cpp  FileLister.h  InstructionsBlock.cpp  InstructionsBlock.h  InstructionsBlock.h~  Scheduler.cpp  Scheduler.h  connection.cpp  connection.h  db.cpp  db.h  handyFunctions.cpp  handyFunctions.cpp~  handyFunctions.h  handyFunctions.h~  logger.cpp  logger.h  main.cpp  mainPage.dox  server.cpp  server.h
src/sqlite3/: sqlite3.c  (+1 more)
(+72 files in other folders)
